# bonsai

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.agents/skills/assist/: SKILL.md
.agents/skills/link/: SKILL.md
.agents/skills/qa/: SKILL.md
.agents/skills/reading/: SKILL.md
.agents/skills/research/: SKILL.md
.agents/skills/search/: SKILL.md
bonsai/: __init__.py  __main__.py
bonsai/cli/: __init__.py  digest.py  fetch.py  lint.py  mailbox.py  search.py  zk.py
scripts/: backup-vault.sh
templates/: .gitignore  AGENTS.md  ontology.md
templates/.agents/skills/mailbox/: SKILL.md
templates/.agents/skills/trace/: SKILL.md
templates/.agents/skills/zk/: SKILL.md
